--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,7 @@
 		<div class="container">
 			<ul class="st-nav-menu nav navbar-nav">
 				<li class="st-nav-section nav-item">
-					<a href="#main" class="navbar-brand">
+					<a href="/" class="navbar-brand">
 						<img src="img/logo.png" alt="Dashcore" class="logo logo-sticky d-block d-md-none">
 					</a>
 				</li>
